--- a/05-conditional-rendering/index.html
+++ b/05-conditional-rendering/index.html
@@ -1,57 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <script src="https://unpkg.com/vue@next"> </script> -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <title>VueJS 3 course 2 TNN</title>
+  </head>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- <script src="https://unpkg.com/vue@next"> </script> -->
-        <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-        <title>VueJS 3 course 2 TNN</title>
-    </head>
+  <body>
+    <div id="app">
+      <button @click="show=!show">Show persons direct:</button>
 
-    <body>
-        <div id="app">
-            <button @click="show=!show">Show persons direct: </button>
+      <button @click="showPersons">
+        method:
+        <span v-if="!show">Show persons</span>
+        <span v-else>Hide persons</span>
+      </button>
 
-            <button @click="showPersons"> method:
-                <span v-if="!show">Show persons</span>
-                <span v-else>Hide persons</span>
-            </button>
+      <p>{{show}}</p>
 
-            <p>{{show}}</p>
+      <ul v-if="show">
+        <li v-for="person in persons">{{person}}</li>
+      </ul>
 
-            <ul v-if="show">
-                <li v-for="person in persons"> {{person}}</li>
-            </ul>
+      <ul v-show="show">
+        <li v-for="person in persons">{{person}}</li>
+      </ul>
+    </div>
 
-            <ul v-show="show">
-                <li v-for="person in persons"> {{person}}</li>
-            </ul>
-        </div>
+    <script>
+      const app = Vue.createApp({
+        data() {
+          return {
+            age: 37,
+            children: 2,
+            title: 'The King in the north',
+            persons: ['John', 'Henry', 'Lewis', 'Danny Boy'],
+            newTitle: '',
+            show: true,
+          }
+        },
 
-        <script>
-            const app = Vue.createApp({
-                data() {
-                    return {
-                        age: 37,
-                        children: 2,
-                        title: "The King in the north",
-                        persons: ["John", "Henry", "Lewis", "Danny Boy"],
-                        newTitle: "",
-                        show: true,
-                    }
-                },
+        methods: {
+          showPersons() {
+            return (this.show = !this.show)
+          },
+        },
+      })
 
-                methods: {
-                    showPersons() {
-                        return this.show = !this.show;
-                    }
-                },
-            });
-
-            app.mount('#app');
-        </script>
-    </body>
-
+      app.mount('#app')
+    </script>
+  </body>
 </html>
