--- a/10-challenge/index.html
+++ b/10-challenge/index.html
@@ -1,85 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <script src="https://unpkg.com/vue@next"> </script> -->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <title>VueJS 3 course 9 dynamic classes TNN</title>
     <style>
-        li {
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-            background-color: rgb(255, 199, 199);
-            margin: 3rem auto;
-            padding: 2rem;
-            width: auto;
-        }
-        img {
-            max-width: 40%;
-            margin: auto;
-            display: block;
-            margin-right: 2rem;
-            
-        }
-        .fav {
-            border: 3px solid green;
+      li {
+        /* display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        background-color: rgb(255, 199, 199);
+        margin: 3rem auto;
+        padding: 2rem;
+        width: auto; */
 
-            background-color: rgb(199, 255, 199);
-        }
+        border: 1px solid grey;
+        border-radius: 10px;
+        padding: 20px;
+        margin: 20px;
+        max-width: 350px;
+      }
+
+      img {
+        padding: 100px 0;
+        max-width: 300px;
+        text-align: center;
+        background: #ddd;
+        margin: 20px;
+        display: block;
+        margin-right: auto;
+        margin-left: auto;
+      }
+
+      .favorite {
+        border: 3px solid green;
+        background-color: #99ff002c;
+      }
+
+      ul {
+        text-decoration: none;
+        list-style-type: none;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="app">
-        <a v-bind:href="url">web site A</a>
-        <a :href="url">web site B</a>
+      <p><a v-bind:href="url" target="_blank">web site A</a></p>
+      <p><a :href="url" target="_blank">web site B</a></p>
 
-        <button @click="togglingFavs"> Toggle Favs</button>
-        <ul>
-            <li v-for="book, index in books" :key="index" :class="{fav:book.isFav}" @click="switchOneIsFav(book)">
-                <img :src="book.img" :alt="book.title + ' ' + book.author">
-                <h2> {{book.title}}</h2>
-                <p> by {{book.author}}</p>
-            </li>
-        </ul>
+      <button @click="togglingFavs">Toggle Favs</button>
+      <ul>
+        <li
+          v-for="book, index in books"
+          :key="index"
+          :class="{favorite:book.isFav}"
+          @click="switchOneIsFav(book)"
+        >
+          <img :src="book.img" :alt="book.title + ' ' + book.author" />
+          <h2>{{book.title}}</h2>
+          <p>by {{book.author}}</p>
+        </li>
+      </ul>
+    </div>
 
-    </div> 
-
-    <script src="https://unpkg.com/vue@next"> </script>
     <script>
-        const app = Vue.createApp({
-            data() {
-                return {
-                    url: "https://www.w3schools.com/js/default.asp",
-                    books: [
-                        {title:'name of the wind', author:'patick rothuss', img: './assets/1.jpg', isFav: true},
-                        {title:'ladys', author:'Mr. Mousso', img: './assets/2.jpg', isFav: false},
-                        {title:'wind of the sun', author:'sun yui tché', img: './assets/3.jpg', isFav: true},
-                    ]
-                }
-            },
+      const app = Vue.createApp({
+        data() {
+          return {
+            url: 'https://www.w3schools.com/js/default.asp',
+            books: [
+              {
+                title: 'name of the wind',
+                author: 'patick rothuss',
+                img: './assets/1.jpg',
+                isFav: true,
+              },
+              {
+                title: 'ladys',
+                author: 'Mr. Mousso',
+                img: './assets/2.jpg',
+                isFav: false,
+              },
+              {
+                title: 'wind of the sun',
+                author: 'sun yui tché',
+                img: './assets/3.jpg',
+                isFav: true,
+              },
+            ],
+          }
+        },
 
-            methods: {
-                togglingFavs() {
-                    this.books.map( book => {
-                        return book.isFav = !book.isFav 
-                    })
-                },
-                switchIsFav() {
-                    this.books.map( book => {
-                    return book.isFav = !book.isFav
-                    })
-                },
-                switchOneIsFav(book) {
-                    book.isFav = !book.isFav;
-                }
-            },
-        });
+        methods: {
+          togglingFavs() {
+            this.books.map((book) => {
+              return (book.isFav = !book.isFav)
+            })
+          },
+          switchIsFav() {
+            this.books.map((book) => {
+              return (book.isFav = !book.isFav)
+            })
+          },
+          switchOneIsFav(book) {
+            book.isFav = !book.isFav
+          },
+        },
+      })
 
-        app.mount('#app');
+      app.mount('#app')
     </script>
-</body>
-
+  </body>
 </html>
