--- a/10-challenge/index.html
+++ b/10-challenge/index.html
@@ -52,13 +52,13 @@
       <p><a v-bind:href="url" target="_blank">web site A</a></p>
       <p><a :href="url" target="_blank">web site B</a></p>
 
-      <button @click="togglingFavs">Toggle Favs</button>
+      <button @click="toggleFavorites">Toggle Favorites</button>
       <ul>
         <li
           v-for="book, index in books"
-          :key="index"
-          :class="{favorite:book.isFav}"
-          @click="switchOneIsFav(book)"
+          :key="book.title"
+          :class="{favorite:book.isFavorite}"
+          @click="switchOneIsFavorite(book)"
         >
           <img :src="book.img" :alt="book.title + ' ' + book.author" />
           <h2>{{book.title}}</h2>
@@ -77,37 +77,37 @@
                 title: 'name of the wind',
                 author: 'patick rothuss',
                 img: './assets/1.jpg',
-                isFav: true,
+                isFavorite: true,
               },
               {
                 title: 'ladys',
                 author: 'Mr. Mousso',
                 img: './assets/2.jpg',
-                isFav: false,
+                isFavorite: false,
               },
               {
                 title: 'wind of the sun',
                 author: 'sun yui tché',
                 img: './assets/3.jpg',
-                isFav: true,
+                isFavorite: true,
               },
             ],
           }
         },
 
         methods: {
-          togglingFavs() {
+          toggleFavorites() {
             this.books.map((book) => {
-              return (book.isFav = !book.isFav)
+              return (book.isFavorite = !book.isFavorite)
             })
           },
-          switchIsFav() {
+          switchIsFavorite() {
             this.books.map((book) => {
-              return (book.isFav = !book.isFav)
+              return (book.isFavorite = !book.isFavorite)
             })
           },
-          switchOneIsFav(book) {
-            book.isFav = !book.isFav
+          switchOneIsFavorite(book) {
+            book.isFavorite = !book.isFavorite
           },
         },
       })
