--- a/11-computed-property/index.html
+++ b/11-computed-property/index.html
@@ -52,13 +52,13 @@
       <p><a v-bind:href="url" target="_blank">web site A</a></p>
       <p><a :href="url" target="_blank">web site B</a></p>
 
-      <button @click="togglingFavs">Toggle Favs</button>
+      <button @click="togglingFavorites">Toggle Favorites</button>
       <ul>
         <li
           v-for="book, index in books"
           :key="index"
-          :class="{favorite:book.isFav}"
-          @click="switchOneIsFav(book)"
+          :class="{favorite:book.isFavorite}"
+          @click="switchOneIsFavorite(book)"
         >
           <img :src="book.img" :alt="`${book.title} ${book.author}`" />
           <h2>{{book.title}}</h2>
@@ -67,14 +67,14 @@
       </ul>
 
       <hr />
-      <hr />
+      <!--  -->
 
       <ul>
         <li
           v-for="book, index in filteredBooks"
           :key="index"
-          :class="{favorite:book.isFav}"
-          @click="switchOneIsFav(book)"
+          :class="{favorite:book.isFavorite}"
+          @click="switchOneIsFavorite(book)"
         >
           <img :src="book.img" :alt="`${book.title} ${book.author}`" />
           <h2>{{book.title}}</h2>
@@ -93,44 +93,44 @@
                 title: 'name of the wind',
                 author: 'Patrick rothuss',
                 img: './assets/1.jpg',
-                isFav: true,
+                isFavorite: true,
               },
               {
                 title: 'ladys',
                 author: 'Mr. Mousso',
                 img: './assets/2.jpg',
-                isFav: false,
+                isFavorite: false,
               },
               {
                 title: 'wind of the sun',
                 author: 'Sun Yui Tché',
                 img: './assets/3.jpg',
-                isFav: true,
+                isFavorite: true,
               },
             ],
           }
         },
 
         methods: {
-          togglingFavs() {
+          togglingFavorites() {
             this.books.map((book) => {
-              return (book.isFav = !book.isFav)
+              return (book.isFavorite = !book.isFavorite)
             })
           },
-          switchIsFav() {
+          switchIsFavorite() {
             this.books.map((book) => {
-              return (book.isFav = !book.isFav)
+              return (book.isFavorite = !book.isFavorite)
             })
           },
-          switchOneIsFav(book) {
-            book.isFav = !book.isFav
+          switchOneIsFavorite(book) {
+            book.isFavorite = !book.isFavorite
           },
         },
 
         computed: {
           filteredBooks() {
             // output is a new array
-            return this.books.filter((book) => book.isFav)
+            return this.books.filter((book) => book.isFavorite)
           },
         },
       })
