--- a/21-using-teleport/public/index.html
+++ b/21-using-teleport/public/index.html
@@ -13,6 +13,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <div class="modals"></div>
+    <div id="modals"></div>
+    <div id="modals2"></div>
   </body>
 </html>
